--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -87,7 +87,7 @@ label {
 # User
 label {
     monitor =
-    text =  SERENITYY
+    text = 
     color = $color12
     font_size = 68
     font_family = Inter Display Medium
