changed screenshot keybind

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -199,27 +199,27 @@ device {
 
 
 ###################
-### KEYBINDINGS ###
+### KEYBINDS ###
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# Keybinds to run apps
 bind = $mainMod, Return, exec, $terminal
-bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
 bind = $mainMod, Space, exec, $menu
-bind = $mainMod, F, fullscreen
 bind = $mainMod, T, exec, firefox
+
+bind = $mainMod, Q, killactive,
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, fullscreen
 bind = $SUPER_SHIFT, W, exec, pkill waybar && waybar &
 bind = $SUPER_SHIFT, F, exec, pkill hyprpaper && hyprpaper &
 
+bind = $SUPER_SHIFT, s, exec, hyprshot -m region --clipboard-only
 bind = ,PRINT, exec, hyprshot -m window --clipboard-only
-bind = control, PRINT, exec, hyprshot -m region --clipboard-only
 bind = $SUPER_SHIFT, l, exec, hyprlock
-
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
