--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -12,13 +12,12 @@
 monitor=HDMI-A-1, 1920x1080@144.01, auto, 1
 #Vertical Monitor
 monitor=DP-1, 1920x1080@74.99, 0x0, 1, transform, 3
+
 ###################
 ### MY PROGRAMS ###
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-
-# Set programs that you use
 $terminal = alacritty 
 $fileManager = dolphin
 $menu = rofi -show drun
@@ -28,13 +27,7 @@ $menu = rofi -show drun
 ### AUTOSTART ###
 #################
 
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet &
 exec-once = waybar & hyprpaper
-
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -110,10 +103,10 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 1
+        size = 2
         passes = 3
 
-        vibrancy = 0.1696
+	vibrancy = 0.1696
     }
 }
 
@@ -132,8 +125,8 @@ animations {
     animation = global, 1, 10, default
     animation = border, 1, 5.39, easeOutQuint
     animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
+    animation = windowsIn, 1, 4.1, easeOutQuint, slide
+    animation = windowsOut, 1, 1.49, linear, slide
     animation = fadeIn, 1, 1.73, almostLinear
     animation = fadeOut, 1, 1.46, almostLinear
     animation = fade, 1, 3.03, quick
@@ -142,9 +135,9 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = workspaces, 1, 8.94, easeOutQuint
+    animation = workspacesIn, 1, 4.94, easeOutQuint, slide
+    animation = workspacesOut, 1, 5.94, easeOutQuint, slide
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -165,8 +158,8 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -176,9 +169,11 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
-    
-    kb_options=caps:swapescape
+    kb_layout = us, sk
+    kb_variant = ,qwerty
+
+    kb_options=grp:alt_shift_toggle, caps:swapescape
+    numlock_by_default = true
 
     follow_mouse = 1
 
@@ -269,12 +264,6 @@ bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
-
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
