no idea wtf i just did

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -19,7 +19,8 @@ monitor=DP-1, 1920x1080@74.99, 0x0, 1, transform, 3
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $terminal = alacritty 
-$fileManager = dolphin
+#$fileManager = dolphin
+$fileManager = alacrityy -e ranger
 $menu = rofi -show drun
 
 
@@ -202,9 +203,9 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Keybinds to run apps
 bind = $mainMod, Return, exec, $terminal
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, alacritty -e ranger
 bind = $mainMod, Space, exec, $menu
-bind = $mainMod, T, exec, firefox
+bind = $mainMod, T, exec, qutebrowser
 
 bind = $mainMod, Q, killactive,
 bind = $mainMod, V, togglefloating,
